--- a/src/app/persons/person-input.component.html
+++ b/src/app/persons/person-input.component.html
@@ -1,3 +1,3 @@
 <label for="name">Name</label>
-<input type="text" id="name" />
-<button>Create</button>
+<input type="text" id="name" #personNameEl />
+<button (click)="onCreatePerson(personNameEl.value)">Create</button>
